--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -747,9 +747,9 @@ es:
           body: "He disfrutado de la Biblia App y pensé que le gustaría también.  He estado leyendo la Biblia mucho más que antes porque es muy fácil de leer, ver, escuchar y compartir.  Cuenta con Planes de Lectura, los cuales tienen una selección de pasajes y versículos que esperan por mi cada día.\n\nEs gratis y puede descargarla, casi a cualquier dispositivo móvil, aquí:\nhttp://www.bible.com/descargar"
       body:
         p1: "Julio 10 será el gran día.  No solo porque es el 5to aniversario de la Biblia App, sino porque también hace 5 años se lanzó a través de iTunes Store de Apple."
-        p2: "¿Pero aún más? Con su ayuda, es el día en que la Biblia App alcance 100 millones de descargas."
+        p2: "¿Pero aún hay más? Con su ayuda, es el día en que la Biblia App alcance 100 millones de descargas."
         p3: "Hemos aprendido que Dios utiliza metas como estas para fomentar un crecimiento aún más grande."
-        p4: "Hagamos historia juntos."
+        p4: "!Hagamos Historia Juntos!"
       ad:
         title: "La Biblia App es completamente gratis y una excelente herramienta para explorar la Biblia."
         copy: "Lea, Escuche, Vea, Comparta.  Instale la Biblia App en su teléfono o tablet: <a href='http://www.bible.com/descargar'>Descargar Ahora</a>"
