--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -15,6 +15,13 @@ ja:
     users username not available: "入力されたユーザ名はご利用いただけません"
     users username or password invalid: "入力いただいたユーザ名またはパスワードが正しくありません"
     users username required: "ユーザ名の入力が必要です。"
+  meta:
+    100million:
+      title: "1億人から始まります。"
+      description: "聖書アプリのダウンロード件数、１億達成という素晴らしい節目に近付いています。でも、これもほんの始まりにすぎません。無料の聖書アプリを今すぐダウンロードして、お友達にもシェアしましょう。共に歴史を塗り替えましょう。"
+    mobile:
+      title: "聖書アプリ"
+      description: "何千万というユーザーが聖書を読んだり、聞いたり、観たり、神様の御言葉をシェアして、生活の一環として聖書アプリを利用しています。ダウンロードして、ブックマーク、ノート、読書プランに、どこからでもアクセスできるように、無料の聖書アプリをダウンロードしましょう。様々な聖書訳や、音読聖書を携帯機器からご利用いただけます。"
   now: "現在…"
   celebrating 50MM: "アプリのインストール数が5000万に達しました!"
   link: "リンク"
@@ -729,10 +736,12 @@ ja:
       tagline: " <em>1億人から</em>始まります。"
       intro: "5周年記念日の7月10日までに聖書アプリのインストール数1億に到達することができるでしょうか？あなたの助け次第です！"
       share:
-        with friends: "友達と共有する"
+        with friends: "友達にシェアする"
         fb:
           dialog name: "聖書アプリをお持ちですか？"
           dialog desc: "聖書アプリはとても気に入っています！聖書を毎日の生活の一部とすることにとても役立っています。ハイライト表示したり、オーディオ聖書を聴いたり、メモを取ったり、デボーション・プランを利用したり…ビデオを観ることまで出来るんです！今すぐダウンロード（無料）しましょう：http://www.bible.com/app"
+        tw:
+          tweet: "@YouVersion聖書アプリを常にホーム画面に置いてあります。読む、観る、聞く、シェアする、全て可能な無料のアプリ: bible.com/app"
         em:
           subject: "聖書アプリをお持ちですか？"
           body: "YouVersionの聖書アプリを楽しく活用しているので、あなたも使ってみたいのでは、と思いました。簡単に読んだり、観たり、聴いたり、シェアしたり出来るので、最近は今までよりも頻繁に聖書を開くようになりました。読書プランもあり、選び抜かれた聖書の箇所が、毎日あなたを待っています。⏎\n⏎\nほとんど全てのモバイル・デバイスに対応した聖書アプリは、ここから入手することが出来ます（無料）：⏎\nhttp://www.bible.com/app"
