--- a/config/locales/mk.yml
+++ b/config/locales/mk.yml
@@ -18,7 +18,7 @@ mk:
   meta:
     100million:
       title: "Започнува со 100 милиони"
-      description: "Апликацијата „Библија“ е преземена речиси 100 милиони пати - неверојатен успех! Но, ние со ова само се загреваме. Преземете ја бесплатната апликација „Библија“ денеска и потоа споделете ја со вашите пријатели. Ајде заедно да напишеме една страна во историјата."
+      description: "Апликацијата „Библија“ е преземена речиси 100 милиони пати - неверојатен успех! Но, ние со ова само се загреваме. Преземете ја бесплатната апликација „Библија“ денеска и потоа споделете ја со вашите пријатели. Ајде да ја создаваме историјата заедно."
     mobile:
       title: "Апликација „Библија“"
       description: "Десетици милиони луѓе ја користат апликацијата „Библија“ да го читаат, слушаат, гледаат и споделуваат Светото писмо, правејќи го дел од секојдневието. Преземете ја бесплатната апликација и пристапете на вашите обележувачи, белешки и планови за читање во секое време, на секое место. Уживајте во стотици различни верзии, вклучувајќи и аудио верзии - сето тоа на вашиот мобилен уред."
@@ -283,7 +283,7 @@ mk:
       information use title: "не преведувај"
       information use text: "Кога се пријавуваш за услуга која бара регистрација, бараме од тебе лични информации. Ако LifeChurch.tv сака да ги употреби тие информации на поразличен начин од целта за која биле прибрани, ќе побараме дозвола од тебе за таа употреба. Не прибираме или користиме лични информации за цели поразлични од оние опишани во Полисата за Приватност и/или во белешките за конкретните услуги, освен ако немаме дозвола од тебе за тоа. Можеш да одбиеш да дадеш лични информации на која било наша услуга, што значи LifeChurch.tv можеби нема да може да ти ја овозможи истата."
       information security title: "Како ги заштитуваме вашите информации?"
-      information security text: "LifeChurch.tv не ги споделува твоите лични информации со други институции надвор од LifeChurch.tv без твоја експлицитна согласност. LifeChurch.tv може да ги сподели твоите лични информации само ако има добра верба дека пристапот, користењето, зачувувањето или откривањето на таква информација е разумно потребно за да се (a) задоволи одреден закон, рагулатива, судски процес или владино барање, (b) спроведе применливи услови на користење, вклучувајќи можни прекршоци, (c) детектира, спречува или во спротивно посочува на измама, безбедносни или технички прашања, или (d) да се заштити против повреда на правата, имотот и безбедноста на LifeChurch.tv, неговите корисници или на јавноста како што е дозволено или забрането со закон. LifeChurch.tv ги превзема неопходните безбедносни мерки да се заштити од неовластен пристап или неовластено менување, објавување или уништување на податоци. Вклучувајќи внатрешни прегледи на нашите податочни колекции, податочни складишта  или процесни практики и безбедносни мерки, како и мерки на физичко обезбедување за заштита од неовластен пристап кон системите каде што ги чуваме личните податоци. Освен со експлицитна дозвола добиена од тебе, LifeChurch.tv го ограничува пристапот на лични информации на своите вработени,  изведувачи и агенти на кои им е потребна таа информација за да ги оперираат, развиваат и унапредуваат нашите сервиси. Овие индивидуалци се обврзани со договори за доверливост и може да бидат предмет на дисциплински мерки, вклучувајќи завршување на работниот однос и кривични пријави, доколку не ги следат овие обврски."
+      information security text: "LifeChurch.tv не ги споделува твоите лични информации со други институции надвор од LifeChurch.tv без твоја експлицитна согласност. LifeChurch.tv може да ги сподели твоите лични информации само ако има добра верба дека пристапот, користењето, зачувувањето или откривањето на таква информација е разумно потребно за да се (a) задоволи одреден закон, рeгулатива, судски процес или владино барање, (b) спроведе применливи услови на користење, вклучувајќи можни прекршоци, (c) детектира, спречува или во спротивно посочува на измама, безбедносни или технички прашања, или (d) да се заштити против повреда на правата, имотот и безбедноста на LifeChurch.tv, неговите корисници или на јавноста како што е дозволено или забрането со закон. LifeChurch.tv ги презема неопходните безбедносни мерки да се заштити од неовластен пристап или неовластено менување, објавување или уништување на податоци, вклучувајќи внатрешни прегледи на нашите податочни колекции, податочни складишта или процесни практики и безбедносни мерки, како и мерки на физичко обезбедување за заштита од неовластен пристап кон системите каде што ги чуваме личните податоци. Освен со експлицитна дозвола добиена од тебе, LifeChurch.tv го ограничува пристапот на лични информации на своите вработени, изведувачи и агенти на кои им е потребна таа информација за да оперираат, развиваат и да ги унапредуваат нашите услуги. Овие индивидуалци се обврзани со договори за доверливост и може да бидат предмет на дисциплински мерки, вклучувајќи завршување на работниот однос и кривични пријави, доколку не ги следат овие обврски."
       data integrity title: "Интегритет на податоците"
       data integrity text: "не преведувај"
       information access title: "Пристапување и ажурирање на личните податоци"
@@ -732,24 +732,24 @@ mk:
     line 1: "Кликни или допри на било кој стих или збир на стихови за да ги обележиш или нагласиш, да запишеш белешка, или да ја споделиш со твоите пријатели! "
   campaigns:
     100m:
-      logo: "YouVersion: апликација Библија"
+      logo: "YouVersion: апликација „Библија“"
       tagline: "Започнува со <em>100 милиони</em>"
-      intro: "Дали може апликацијата Библија да достигне 100 милиони инсталации пред нашата 5 годишнина на 10 Јули? Само со твоја помош!"
+      intro: "Дали може апликацијата Библија да достигне 100 милиони преземања пред нашата 5 годишнина на 10 Јули? Само со ваша помош!"
       share:
-        with friends: "Сподели со твоите пријатели"
+        with friends: "Споделете со вашите пријатели"
         fb:
-          dialog name: "Дали ја имаш апликацијата Библија?"
-          dialog desc: "Ја сакам апликацијата Библија! Навистина ми помогна Библијата да стане дел од мојот секојдневен живот. Ми дозволува да подвлечам текст, да слушам аудио Библија, да пишувам белешки, да следам план за побожност... дури и да гледам видеа! Превземи ја сега (бесплатна е): http://www.bible.com/app"
+          dialog name: "Дали ја имате апликацијата „Библија“?"
+          dialog desc: "Ептен ми се допаѓа апликацијата „Библија“! Навистина ми има помогнато да ја направам Библијата дел од моето секојдневие. Можам да нагласувам, подвлекувам, обележувам, можам да слушам Библијата во аудио формат, можам да си пишувам белешки, да следам Планови за читање... дури можам и да гледам видеа! Преземи ја тука (бесплатна е): http://www.bible.com/app"
         tw:
           tweet: "Апликацијата „Библија“ од @YouVersion има постојано место на мојот екран. Читај, гледај, слушај и споделувај... сето тоа во една бесплатна апликација: bible.com/app"
         em:
-          subject: "Дали ја имаш апликацијата Библија?"
-          body: "Уживав со апликацијата Библија од YouVersion и помислив дека може да ти се допадне и на тебе. Ја отварам Библијата многу почесто овие денови бидејќи толку е лесна да се чита, гледа, слуша и споделува. Дури има и план, кој што има избран дел од Библијата што ме чека секој ден. ⏎\n⏎\nМожеш да ја превземеш (бесплатно!) за речиси секој мобилен уред тука: ⏎\nhttp://www.bible.com/app"
+          subject: "Дали ја имате апликацијата „Библија“?"
+          body: "Веќе некое време ѝ се радувам на апликацијата „Библија“ од YouVersion и мислам дека и на тебе многу ќе ти се допадне. Ја читам Библијата многу повеќе од порано, бидејќи е толку едноставна за читање, слушање, гледање и споделување. Има дури и Планови за читање, кои содржат селекција од Библијата во вид на дневно четиво сервирано за мене секојдневно.\n\nМожеш да ја преземеш (бесплатно!) од тука, за речиси сите мобилни уреди:\nhttp://www.bible.com/app"
       body:
-        p1: "10 Јули ќе биде голем ден. Не само што е 5 годишнина на апликацијата Библија, туку обележува и 5 години од лансирањето на Apple iTunes Store."
-        p2: "И уште повеќе? Со твоја помош, близу е денот кога апликацијата Библија ќе достигне 100 милиони превземања."
-        p3: "Научивме дека Господ користи моменти како овој да поттикне уште поголем развој."
-        p4: "Да ја направиме историјата заедно"
+        p1: "10 јули ќе биде голем ден. Не само што е 5 годишнина на апликацијата „Библија“, туку обележува и 5 години од лансирањето на Apple iTunes Store."
+        p2: "И знаеш што? Со твоја помош, близу е денот кога апликацијата „Библија“ ќе достигне 100 милиони преземања."
+        p3: "Научивме дека Господ користи вакви моменти да поттикне уште поголем развој."
+        p4: "Ајде да ја создаваме историјата заедно."
       ad:
-        title: "Апликацијата Библија е целосно бесплатна и претставува одличен начин да се истражи Библијата."
-        copy: "Читај, Слушај, Гледај, Сподели. Превземи ја апликацијата Библија на твојот паметен телефон или таблет: <a href='http://bible.com/app'>Превземи сега</a>"
+        title: "Апликацијата „Библија“ е целосно бесплатна и претставува одличен начин да се истражи Библијата."
+        copy: "Читај, слушај, гледај, сподели. Преземи ја апликацијата „Библија“ на твојот смартфон или таблет: <a href='http://bible.com/app'>Преземи сега</a>"
