--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -15,6 +15,13 @@ ru:
     users username not available: "Выбранное имя пользователя уже занято."
     users username or password invalid: "Имя пользователя или пароль введены неверно."
     users username required: "Необходимо ввести имя пользователя."
+  meta:
+    100million:
+      title: "Всё начинается со 100 миллионов"
+      description: "Приложение Библия было установлено почти 100 млн раз — это просто невообразимо! И мы только начинаем! Установите бесплатное приложение сегодня и поделитесь ссылкой на приложение с друзьями. Давайте вместе творить историю!"
+    mobile:
+      title: "Приложение Библия"
+      description: "Десятки миллионов людей пользуются приложением Библия, чтобы читать, слушать, смотреть и делиться Словом Божьим, и делать его частью своей ежедневной жизни. Установите бесплатное приложение и получите доступ к своим закладкам, заметкам и планам чтения с любого устройства. Читайте Библию в сотнях переводов, слушайте аудио версии прямо со своего мобильного устройства."
   now: "Сейчас"
   celebrating 50MM: "Отмечаем 50 миллионов установок!"
   link: "Ссылка"
@@ -276,6 +283,7 @@ ru:
       information use title: "Как мы используем Вашу информацию?"
       information use text: "Когда Вы подписываетесь на конкретную услугу, для получения которой требуется регистрация, мы запрашиваем у Вас личные сведения. В случае если LifeChurch.tv захочет использовать эту информацию с целью, отличной от той, для которой она была получена, мы предварительно обратимся к Вам за разрешением на такое использование. Вы имеете право отказаться от предоставления личных сведений в любой из наших сервисов, и в таком случае предоставление нами Вам этих сервисов может оказаться невозможным."
       information security title: "Как мы защищаем Вашу информацию?"
+      information security text: "LifeChurch.tv не передает Вашу личную информацию другим организациям, не связанным с LifeChurch.tv, без Вашего на то согласия. LifeChurch.tv может предоставить Вашу личную информацию исключительно в том случае, если может добросовестно предполагать, что использование, сохранение, раскрытие или доступ к такой информации обоснованно необходимы для того, чтобы а) выполнить требования любого применимого закона, положения, судебной процедуры или подлежащего исполнению запроса государственных органов, б) обеспечить исполнение соответствующих Условий обслуживания, включая расследование потенциальных нарушений таких Условий; в) выявить, предотвратить или принять иные меры в отношении мошенничества, вопросов безопасности или технических проблем; или г) предотвратить неизбежное нанесение вреда правам, имуществу и безопасности LifeChurch.tv, ее пользователей или населению в целом, как того требует или допускает законодательство.\n\nLifeChurch.tv принимает соответствующие меры безопасности для предотвращения несанкционированного доступа или несанкционированного изменения, разглашения или удаления данных. В эти шаги входит внутренняя проверка наших правил по сбору, хранению и обработке данных, а также мер безопасности и физических защитных мер, принимаемых для защиты систем, в которых хранятся личные данные, от несанкционированного доступа. Мы предоставляем доступ к личной информации только тем работникам, подрядчикам и агентам LifeChurch.tv, которым эта информация необходима для предоставления, разработки или улучшения качества наших услуг. Этих лиц связывают обязательства по неразглашению информации, в случае нарушения которых им могут грозить дисциплинарные меры, включая увольнение и уголовное преследование."
       data integrity title: "Целостность данных"
       data integrity text: "LifeChurch.tv постоянно анализирует свои правила по сбору, хранению и обработке информации, чтобы гарантировать, что мы собираем, храним и обрабатываем только ту информацию, которая необходима для предоставления наших услуг или их усовершенствования. Мы предпринимаем разумные меры для обеспечения точности и полноты информации, которую мы обрабатываем. При этом мы рассчитываем на то, что наши пользователи будут сами при необходимости вносить изменения или дополнения в свою личную информацию."
       information access title: "Доступ к личной информации и внесение изменений"
@@ -724,9 +732,24 @@ ru:
     line 1: "Нажмите на любой стих или набор стихов, чтобы добавить закладку, выделить маркером, написать заметку или поделиться с друзьями."
   campaigns:
     100m:
+      logo: "YouVersion: Приложение Библия"
+      tagline: "Всё начинается со <em>100 миллионов</em>"
       intro: "Сможет ли приложение Библия достичь 100 млн установок до нашей пятой годовщины 10 июля? Только с вашей помощью!"
       share:
+        with friends: "Поделиться с друзьями"
         fb:
-          dialog name: "У тебя есть приложение Библия?"
+          dialog name: "У вас есть приложение Библия?"
+          dialog desc: "Мне очень нравится приложение Библия! Оно действительно помогло мне сделать Библию частью моей ежедневной жизни. С его помощью можно выделять маркером стихи, слушать аудиоверсии Писания, делать заметки, наслаждаться назидательными планами, даже смотреть видео! Загрузить бесплатное приложение можно здесь: http://www.bible.com/app"
+        tw:
+          tweet: "Библия от @YouVersion — постоянный гость на экране моего телефона. Читай, смотри, слушай, делись с его помощью: bible.com/app"
         em:
-          subject: "У тебя есть приложение Библия?"
+          subject: "У вас есть приложение Библия?"
+          body: "Мне очень нравится приложение Библия от YouVersion, думаю, оно понравится и тебе! С этим приложением я открываю Библию намного чаще: читаю, смотрю, слушаю и делюсь избранными отрывками с друзьями. В приложении есть даже планы чтения, помогающие читать Библию каждый день!\n\nПриложение работает почти на любом мобильном устройстве, и главное — оно бесплатно:\n http://www.bible.com/app"
+      body:
+        p1: "10 июля будет станет знаковой датой! Это не только пятая годовщина приложения Библия, но и пятилетие с открытия Apple iTunes Store."
+        p2: "Ещё больше? С вашей помощью в этот день приложение Библия достигнет 100 млн загрузок."
+        p3: "Мы знаем, что, с помощью таких достижений, как это, Бог обеспечит нам ещё больший рост!"
+        p4: "Давайте вместе творить историю!"
+      ad:
+        title: "Приложение Библия полностью бесплатно и идеально подходит для изучения Библии."
+        copy: "Читайте, слушайте, смотрите, делитесь. Приложение Библия для смартфонов и планшетов: <a href='http://bible.com/app'>Загрузить прямо сейчас</a>"
