--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -17,8 +17,8 @@ zh-CN:
     users username required: "请务必输入用户名。"
   meta:
     100million:
-      title: "从1亿开始"
-      description: "圣经软件的安装量已经超过1亿次，这真是一个不可思议的里程碑！但是我们才刚刚开始。下载免费的圣经软件，然后与朋友们分享这个软件，让我们一起开创历史。"
+      title: "从<em>1 亿</em>开始"
+      description: "圣经软件的安装量几乎达到1亿次，这真是一个不可思议的里程碑！但是我们才刚刚开始。下载免费的圣经软件，然后与朋友们分享这个软件，让我们一起开创历史。"
     mobile:
       title: "圣经软件"
       description: "数千万的人正在通过圣经软件阅读、收听、观看并分享神的话语，让神的话语成为成为他们日常生活的一部分。下载免费圣经软件，无论在哪里都可以访问您的书签、笔记和读经计划。享用数百种圣经译本，包括有声圣经，这一切都在您的移动设备上实现。"
@@ -739,7 +739,9 @@ zh-CN:
         with friends: "与您的朋友分享"
         fb:
           dialog name: "您有安装圣经软件吗？"
-          dialog desc: "我喜爱圣经软件！它真的帮助我使圣经成为我日常生活的一部分。圣经软件能帮我做经文高亮记号，听音频圣经，记录笔记，跟踪灵修计划... 甚至观看视频！快去这里下载吧（还是免费的）：http://www.bible.com/app"
+          dialog desc: "我喜爱圣经软件！它真的帮助我使圣经成为我日常生活的一部分。圣经软件能帮我做经文高亮显示，听音频圣经，记录笔记，跟踪灵修计划... 甚至观看视频！快去这里下载吧（还是免费的）：http://www.bible.com/app"
+        tw:
+          tweet: "我将 @YouVersion 的圣经软件常驻在主屏幕上。无论阅读圣经，观看视频，收听录音或分享经文... 都可在这个免费软件中完成：bible.com/app"
         em:
           subject: "您有安装圣经软件吗？"
           body: "我很喜欢使用 YouVersion 的圣经软件，我想你也会喜欢的。不管是阅读，看视频，听录音或分享经文，这个圣经软件都很好用，所以现在我接触圣经的次数也更多了。圣经软件甚至还包括了读经计划，可将经文有选择的挑出来，供我每天阅读。⏎\n⏎\n圣经软件支持几乎任何移动设备，你可以从这里 ( 免费! ) 安装：http://www.bible.com/app"
