--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -15,6 +15,10 @@ zh-TW:
     users username not available: "您提供的用戶名不存在。"
     users username or password invalid: "您提供的用戶名或密碼無效。"
     users username required: "您必須鍵入用戶名。"
+  meta:
+    mobile:
+      title: "聖經軟體"
+      description: "數以千萬的人們透過聖經軟體來閱讀、看視訊、聽音訊或分享經文上帝的話語。請下載這個免費軟體然後隨時隨地存取您的書籤、筆記和讀經計劃。享受使用上百個聖經譯本，包括語音版，全部都在您的行動設備裡。"
   now: "現在"
   celebrating 50MM: "慶祝5000萬次的安裝！"
   link: "鏈結"
@@ -724,9 +728,22 @@ zh-TW:
     line 1: "點擊任何一個或系列的經節來標記書籤、高亮顯示、創建筆記，或與朋友分享！"
   campaigns:
     100m:
+      logo: "YouVersion：聖經軟體"
       intro: "聖經軟體能否在7月10日5週年前達到一億個安裝的里程碑嗎？全靠您的幫助！"
       share:
+        with friends: "和您的朋友分享"
         fb:
           dialog name: "您有使用聖經軟體嗎？"
+          dialog desc: "我喜歡聖經軟體！它真的使聖經成為我日常生活的一部分。聖經軟體能讓我高亮顯示經文、聆聽語音聖經、創建筆記、跟進靈修計劃... 甚至觀賞視訊！請現在就去下載 (免費的)：http://www.bible.com/app"
+        tw:
+          tweet: "我將 @YouVersion 的聖經軟體長駐在我的主熒幕上。無論是閱讀、觀看視訊、聆聽音訊或分享經文... 全都在一個免費的程序裡:\nbible.com/app"
         em:
           subject: "您有使用聖經軟體嗎？"
+          body: "我很喜歡使用 YouVersion 的聖經軟體，我想您也會喜歡的。不管是閱讀、看視訊、聽音訊或分享經文，聖經軟體都很容易使用，因此現在我接觸聖經的次數也更多了。聖經軟體也包括了讀經計劃，每天備有一系列的精選經文供我閱讀。\n\n您可以從這裡把軟體下載和安裝 (免費的！) 到幾乎任何款式的行動設備上:\nhttp://www.bible.com/app"
+      body:
+        p1: "7月10號是個大日子。不單是聖經軟體的5週年，更是蘋果公司的iTunes Store誕生了5年了。"
+        p3: "我們知道到神利用好像這一個的里程碑去推動更大增長。"
+        p4: "讓我們一同創造歷史。"
+      ad:
+        title: "聖經軟體是完全免費和是一個很棒的方式來探索聖經。"
+        copy: "閱讀、看視訊、聽音訊或分享經文。下載聖經軟體到你的智能電話或平板電腦：<a href='http://bible.com/app'>即時下載</a>"
