--- a/config/locales/id.yml
+++ b/config/locales/id.yml
@@ -15,6 +15,13 @@ id:
     users username not available: "Nama Pengguna yang diberikan tidak tersedia"
     users username or password invalid: "Nama Pemakai atau kata sandi yang diberikan tidak berlaku"
     users username required: "Anda harus masukkan nama pengguna."
+  meta:
+    100million:
+      title: "Dimulai dengan 100 juta"
+      description: "Aplikasi Alkitab telah dipasang hampir 100 juta kali - kejadian penting yang luar biasa! Namun ini hanya permulaan saja. Unduh Aplikasi Alkitab gratis hari ini - dan bagikan app ini kepada teman-teman anda.  Mari kita buat sejarah bersama-sama."
+    mobile:
+      title: "Aplikasi Alkitab"
+      description: "Puluhan juta orang menggunakan Aplikasi Alkitab untuk membaca, mendengarkan, melihat dan berbagi Firman Tuhan, membuat Firman Tuhan bagian kehidupan mereka sehari-hari. Unduh aplikasi gratis ini dan akses penanda buku, catatan, dan rencana bacaan Anda dari manapun. Nikmati ratusan versi, termasuk audio, semua di perangkat seluler Anda."
   now: "Sekarang"
   celebrating 50MM: "Merayakan 50 Juta Instalasi Aplikasi"
   link: "Tautan"
@@ -732,6 +739,8 @@ id:
         fb:
           dialog name: "Apakah anda memiliki Aplikasi Alkitab?"
           dialog desc: "Saya suka Aplikasi Alkitab! Itu benar-benar membantu saya menjadikan Alkitab bagian kehidupan keseharian saya. Mengizinkan saya menyorot, mendengarkan Alkitab audio, membuat catatan, mengikuti program renungan...bahkan menonton video! Ayo unduhlah sekarang (gratis): http://www.bible.com/app"
+        tw:
+          tweet: "Aplikasi Alkitab dari @YouVersion mempunyai tempat tetap di layar utama saya.  Baca, lihat, dengar, dan bagikan...semua tersedia dalam aplikasi gratis:bible.com/app"
         em:
           subject: "Apakah anda memiliki Aplikasi Alkitab?"
           body: "Saya menikmati Ap Alkitab dari YouVersion dan berpikir mungkin anda juga akan menyukainya. Saya lebih sering membuka Alkitab hari-hari ini karena itu sangat mudah dibaca, ditonton, didengar, dan dibagikan. Itu bahkan memiliki Program, yang mencakup pilihan dari Alkitab semuanya terpilih dan menanti saya setiap harinya. \n\n Anda dapat mendapatkannya (gratis!) untuk hampir semua piranti bergerak di sini: \n http://www.bible.com/app"
